--- a/postgraduate/word/simple-word/markdown/p18-p20.md
+++ b/postgraduate/word/simple-word/markdown/p18-p20.md
@@ -61,7 +61,7 @@
 - escape
     - vi. 逃跑； vt./n. 逃避，逃离
     - inescapably 不可避免的
-        - The law(法律) (the court shapes) is inescapably political. 法律（法院所塑造的法律）不可避免地具有政治性
+        - The law(法律) (the court shapes) is inescapably political([pəˈlɪtɪkl]). 法律（法院所塑造的法律）不可避免地具有政治性
 - fat
     - adj. 胖的；丰厚的
     - fat pay 丰厚的收入
@@ -90,7 +90,7 @@
         - vi == vis- 看
         - Surely it should be obvious to the dimmest(人：笨的；物：昏暗的) executive(管理人员)...
 - quarter
-    - **n. 四分之一；一刻钟；季度；** vt. 将... 四等分
+    - **n. 四分之一；一刻钟；季度；** vt. 将... 四等分 [ˈkwɔːrtər]
     - qua- 4
     - 四分之一
         - a quarter of web content
@@ -129,7 +129,7 @@
     - Wind and solar power <u>accounted for</u> more than 10 percent.
         - **accounted for** 占...比例（后边有数字）；解释
 - strange
-    - adj. 奇怪的，奇异的
+    - adj. 奇怪的，奇异的 [streɪndʒ]
 - thin
     - adj. 瘦的，薄的，稀薄的
     - the thin ice 薄冰
@@ -158,10 +158,10 @@
 - error
     - n. 错误，差错
     - The top reason for the fake news phenomenon(现象) is "reade error". 假新闻现象的最主要原因是‘读者错误’
-    - erroneous adj. 错误的
+    - erroneous adj. 错误的 [ɪˈroʊniəs]
         - ...reveal(揭示) its erroneous nature(本质).
 - familiar
-    - adj. 熟悉的；随便的，放肆的
+    - adj. 熟悉的；随便的，放肆的 [fəˈmɪliər]
     - unfamiliar 不熟悉的
     - New skills and unfamiliar business models are needed too. 还需要新的技能和不熟悉的商业模式
 - final
@@ -214,7 +214,7 @@
     - proud adj. 自豪的 be proud of
         - Stratford <u>is</u> most <u>pound of</u> its nonconformist(不墨守成规的) image.
 - province
-    - n. 省；领域，范围
+    - n. 省；领域，范围 [ˈprɑːvɪns]
     - pro- 向前
 - quote
     - v. 引用，n. 引文，引语
@@ -229,8 +229,8 @@
     - retail v./n. 零售 adj. 零售的
         - It originally retailed at $23.50.
 - secret
-    - adj. 秘密的，机密的
-    - secretary n. 秘书，大臣
+    - adj. 秘密的，机密的 [ˈsiːkrət]
+    - secretary n. 秘书，大臣 [ˈsekrəteri]
 - sex
 - suddenly
     - adv. 突然，猛然
@@ -269,7 +269,7 @@
     - every day adv.
         - We unconsciously(无意识的) imitate(模拟) the behavior we see every day.
 - fruit
-    - n. 水果；**成果**
+    - n. 水果；**成果** [fruːt]
     - fruitless 没有成果的
 - gas
     - n. 气体；煤气；汽油
@@ -316,7 +316,7 @@
     - competitive spirit 竞争精神
         - pet- 追求
     - cooperative spirit 合作精神
-    - innovative spirit 创新精神
+    - innovative([ˈɪnəveɪtɪv]) spirit 创新精神
         - nov- 新
             - novel adj. 新颖的
 - star
@@ -344,7 +344,7 @@
 - artist
     - n. 艺术节；美术家
 - ceremony
-    - n. 仪式，典礼 == ritual [ˈserəmoʊni]
+    - n. 仪式，典礼 == ritual([ˈrɪtʃuəl]) [ˈserəmoʊni]
     - graduation ceremony
 - chain
     - n. 链条；**连锁店**
@@ -417,7 +417,7 @@
     - n. 定额；限额
     - Norway adopted(采用) a nationwide corporate(公司的) gender quota. 挪威采取了全国性的公司性别配额
 - soccer
-    - n. 足球
+    - n. 足球 [ˈsɑːkər]
     - association football 足球
 - southern
     - adj. 南方的；南部的
