--- a/postgraduate/word/simple-word/markdown/p21-p23.md
+++ b/postgraduate/word/simple-word/markdown/p21-p23.md
@@ -41,17 +41,17 @@
               /descend(下降, desc)/decline(下降)/plunge(暴跌)</u>.
     - management n. 经营，管理
 - aid
-    - n./vt. 帮助（官方）
+    - n./vt. 帮助（官方） [eɪd]
     - Bolivar had received aid from Haiti(海地)...
-    - aide n. 助手
+    - aide n. 助手 [eɪd]
 - attack
-    - v./n. 袭击；抨击； n. (疾病)突然发作
+    - v./n. 袭击；抨击； n. (疾病)突然发作 [əˈtæk]
     - 袭击；抨击
         - Labour(劳动党) is under attack for opposing(反对) development.
     - heart attack 心脏病发作
 - banker
 - barber
-    - n. 理发师（男）
+    - n. 理发师（男） [ˈbɑːrbər]
     - hairdresser 理发师（女）
 - brand
     - n. 烙印，**商标** ；vt. 打烙印于；加商标于
@@ -66,7 +66,7 @@
         - It takes several days before a check is cashed.
             - check n. 支票； v. 检查
 - circuit
-    - n. 电路，线路；巡回路线；环行
+    - n. 电路，线路；巡回路线；环行 [ˈsɜːrkɪt]
     - circu- 圈，环
     - A break in the circuit caused the lights to go out.
     - circuit judge 巡回法官
@@ -79,7 +79,7 @@
         - this/these clothes
         - I need to buy some clothes.
     - 前方不能加a/an/数词
-    - cloth 布
+    - cloth 布 [klɔːθ]
         - Clean the windows with a soft cloth.
     - clothing n. 衣服总称
         - We need warm clothing for the winter.
@@ -118,7 +118,7 @@
         - fine
         - final
 - fishery
-    - n. 渔场
+    - n. 渔场 [ˈfɪʃəri]
 - fun
     - adj. 有趣的
 - green
@@ -131,7 +131,7 @@
     - multi- 多
         - multiform 多样的
 - muscle
-    - n. 肌肉；力量；实力；体力
+    - n. 肌肉；力量；实力；体力 [ˈmʌsl]
 - narrow
     - adj. 狭窄的；狭隘的；勉强的； v. 使变窄；缩小
     - a narrow concept 一个狭隘的概念
@@ -155,7 +155,7 @@
     - retailer n. 零售商
     - detail n. 细节
 - scene
-    - n. 场面；情景；现象
+    - n. 场面；情景；现象 [siːn]
     - The team's victory(胜利) produced scenes of joy(喜悦) all over the country.
 - sea
     - n. 海；海洋(靠近陆地的)
@@ -183,14 +183,14 @@
         - indeed adv. 真正地，当然；确实（同一方面递进）
     - additional adj. 额外的；附加的
 - weak
-    - adj. **虚弱的；能力弱的**； 灯光的微弱；稀薄的
+    - adj. **虚弱的；能力弱的**； 灯光的微弱；稀薄的 [wiːk]
     - who are physically weak or crippled(跛的)
     - the weak lecture 糟糕的演讲
     - weaken v. 使虚弱；减弱
         - ...weaken big tech companies
     - weakness n. 虚弱
     - week 星期，周
-    - wake v. 醒来；唤醒
+    - wake v. 醒来；唤醒 [weɪk]
 - pair
     - n. 一双；一对；一副； v. 配对
     - pairs of unrelated(无关) friends
@@ -210,7 +210,7 @@
 - restaurant
     - n. 餐馆；饭店
 - boring
-    - adj. 没趣的；令人厌倦的
+    - adj. 没趣的；令人厌倦的 [ˈbɔːrɪŋ]
     - bored adj. 厌倦的；烦闷的
     - boring vs bored
         - boring 修饰物 boring game
@@ -263,7 +263,7 @@
     - n. 卫星；人造卫星
     - Jupiter 木星
 - designer
-    - n. 设计者；构思着
+    - n. 设计者；构思者
     - design v. 设计
 - vitamin
     - n. 维生素
@@ -297,7 +297,7 @@
     - n. 原料，材料(== thing)； vt. 填进，塞满
     - stuffed animals 动物玩偶
 - diary
-    - n. 日记本
+    - n. 日记本 [ˈdaɪəri]
     - di- 日子
         - diet n. 日常饮食； vi. 节食
 - pretty
@@ -305,7 +305,7 @@
     - a pretty girl(n.)
     - Most folks(伙计们) still feel pretty comfortable(adj.).
 - grammar
-    - n. 语法（书）
+    - n. 语法（书） [ˈɡræmər]
     - gram- 刻；写
         - program n. 程序
         - diagram n. 图表
@@ -319,7 +319,7 @@
         - eradicate v. 根除
     - The information was transmitted by radio.
 - evil
-    - adj. 邪恶的，有害的； n. 邪恶，罪恶
+    - adj. 邪恶的，有害的； n. 邪恶，罪恶 [ˈiːvl]
     - live -> evil
 - lecture
     - n./v. 演讲，训诫
@@ -369,7 +369,7 @@
         - motor n. 发动机
         - motion n. 移动
 - guard
-    - n. 卫兵； vt. 守卫；看守
+    - n. 卫兵； vt. 守卫；看守 [ɡɑːrd]
     - guardian n. 保护者；守卫者
     - -ian 专业的人
         - historian 历史学家
