--- a/postgraduate/word/simple-word/markdown/p24-p26.md
+++ b/postgraduate/word/simple-word/markdown/p24-p26.md
@@ -5,12 +5,12 @@
 - beat
     - vt. 打；击；打败； vi. 跳动； n. 跳动；节拍
     - 战胜
-        - It's easy to beat plastic.
+        - It's easy to beat plastic(塑料).
     - n. 跳动
         - Listening through earphones to the same monotonous beats.
     - meat n. 肉
 - peculiar
-    - adj. 特有的，独特的；奇怪的，古怪的
+    - adj. 特有的，独特的；奇怪的，古怪的 [pɪˈkjuːliər]
     - peculiar to sth 某物所特有的
         - the geographic conditions <u>peculiar to America</u>.
 - sudden
@@ -35,7 +35,7 @@
     - n. 包裹；一群(a pack of)； v. 打包；塞满
     - 塞满
         - More people are trying to overpack their carry-on bags.
-    - package n. 包裹；包装；一揽子交易（或计划）； vt. 打包；包装（）
+    - package n. 包裹；包装；一揽子交易（或计划）； vt. 打包；包装
         - a pack of deal 一揽子交易
         - a pack of plan 一揽子计划
         - 包装
@@ -73,11 +73,11 @@
     - tie-tight
     - a tight knot 紧的结
     - a tight budget 紧张的预算
-    - tighten v. 变紧，更加牢固
+    - tighten v. 变紧，更加牢固 [ˈtaɪtn]
         - tighten the belt(腰带) == belt-tightening 节衣缩食
     - tightly adv. 紧紧地，牢固地
 - silver
-    - n. 银器；银；银币
+    - n. 银器；银；银币  [ˈsɪlvər]
     - **sliver lining** 一线希望
 - rear
     - n. 背部，后面 adj. 后部的背后的； vt. 抚养；饲养
@@ -88,7 +88,7 @@
 - wood
     - n. 木材，木料；（pl. woods）树林
 - folk
-    - n. 民族，人民；adj. 民间的
+    - n. 民族，人民；adj. 民间的 [foʊk]
     - fork n. 叉子
 - friendship
     - n. 友谊，友好
@@ -110,7 +110,7 @@
     - n. 糖；（食用糖）；vt. 在...中加糖
     - candy n. 糖果
 - fellow
-    - n. 同伙，同事；会员； adj. 同伴的，同事的
+    - n. 同伙，同事；会员； adj. 同伴的，同事的 [ˈfeloʊ]
     - Rats can send out warning message to their fellow.
 - miss
     - n. 小姐； vt. **想念；错过；漏掉**
@@ -119,7 +119,7 @@
     - n. 车站
     - sta- 站
 - causal
-    - adj. 不经意的，非正式的；偶然的
+    - adj. 不经意的，非正式的；偶然的 [ˈkɔzəl]
     - cas- == aid- 落下
     - ...away from casual interactions(n. 相互作用) with strangers(n. 陌生人)...
 - copy
@@ -129,7 +129,7 @@
 - townsfolk
     - n. 镇民，市民
 - journey
-    - n. 旅行，行程
+    - n. 旅行，行程 [ˈdʒɜːrni]
     - travel vs journey
         - travel 长途旅行
         - journey 与记录有关
@@ -184,7 +184,7 @@
     - be proud of 对...感到骄傲
     - proudly adv. 得意地；自豪地
 - pure
-    - n. 纯的，纯洁的；纯净的；抽象的；完全的，十足的
+    - n. 纯的，纯洁的；纯净的；抽象的；完全的，十足的 [pjʊr]
     - 完全的
         - The idea is pure lobby(游说) talk.
     - purely adv. 完全地，纯粹地
@@ -246,7 +246,7 @@
     - defendant n. 被告
 - legally
     - adv. 法律上地；合法地
-    - legal adj. 合法的
+    - legal adj. 合法的 [ˈliːɡl]
 - empty
     - adj. 空的；空闲的； vt. 使失去；腾空
     - 空的
@@ -262,7 +262,7 @@
 - socially
     - adv. 社会上地；善于交际的
     - soc- 联合
-    - social adj. 社会的，社交的
+    - social adj. 社会的，社交的 [ˈsoʊʃl]
 - pleasant
     - adj. 令人愉快的；可喜的
 - fourth
@@ -285,7 +285,7 @@
 - hotel
     - n. 旅馆
 - formerly
-    - adv. 以前；从前
+    - adv. 以前；从前 [ˈfɔːrmərli]
     - Formerly it lasted three days...
     - former adj. 以前的，从前的
         - fore- 在...之前
@@ -298,7 +298,7 @@
 - volume
     - n. 卷，册，书卷；体积，容量；响度
     - vol- 卷，轴
-        - **involve** v. 涉及，卷入
+        - **involve** v. 涉及，卷入 [ɪnˈvɑːlv]
     - a two-volume report 两卷报道
     - n. 量
         - <u>The IT industry(信息技术产业)</u> produces about <u>the same</u> volume of greenhouse gases <u>as</u> the
@@ -309,7 +309,7 @@
 - unpleasant
     - adj. 令人不快的，不舒服的
 - acre
-    - n. 英亩
+    - n. 英亩 [ˈeɪkər]
     - California's plans treat(处理) 35000 acres of forecast a year by 2020...
 - morning
 - ticket
@@ -375,7 +375,7 @@
     - n. 农场主，农民
 - smooth
     - adj. 光滑的；平稳的，顺利的
-    - Your outline should smoothly conduct you from one point to the next.
+    - Your outline should smoothly conduct(执行) you from one point to the next. 你的提纲应该顺利地引导你从一个要点过渡到下一个要点
 - sample
     - n. 样本，式样；
     - 考在完形填空中往往是正确选项
@@ -389,7 +389,7 @@
         - public transportation 公共交通
         - Men <u>tend to(往往)</u> talk more in public than women.
 - colony
-    - n. 殖民地，聚民区
+    - n. 殖民地，聚民区 [ˈkɑːləni]
     - col- == cul- 培养
         - culture n. 文化
     - Spanish(西班牙人) colonies had been established in Mexico.
