--- a/postgraduate/word/simple-word/markdown/p27-p29.md
+++ b/postgraduate/word/simple-word/markdown/p27-p29.md
@@ -6,14 +6,14 @@
     - 痕迹
         - The use of electronic means of payment leaves an electronic trail.
 - coach
-    - n. **教练**；长途汽车； vt. **训练，指导**
+    - n. **教练**；长途汽车； vt. **训练，指导** [koʊtʃ]
     - n. 教练
         - I'm a coach，and you're my team，and we're in this together.
     - vt.
         - ...to coach lawyers on the shifting(转移) landscape for patents(专利). 指导律师们应对不断变化的专利领域
 - theater
-    - n. 戏剧，剧院
-    - The professional companies prospered in their permanent theaters.
+    - n. 戏剧，剧院 [ˈθiːətər]
+    - The professional companies prospered in their permanent theaters. 这些专业剧团在他们固定的剧院里兴盛起来
 - backward
     - adj. 向后的； adv. 向后
 - spring
@@ -27,7 +27,7 @@
     - distasteful adj. 令人讨厌的，令人厌恶的
         - Accepting favors in return for opening doors is "distasteful".
 - via
-    - prep. 经由 == by
+    - prep. 经由 == by [ˈviːə]
     - The current immigration(移民) system in the US has been fixed via political means(方法).
 - vocabulary
     - n. 词汇量
@@ -64,9 +64,9 @@
     - n. 卡车
     - tra- == tru- 拖着
 - linguist
-    - n. 语言学家；通晓数国语言的人
+    - n. 语言学家；通晓数国语言的人 [ˈlɪŋɡwɪst]
     - lingu- 语言
-        - bilingual adj. 双语的
+        - bilingual adj. 双语的 [ˌbaɪˈlɪŋɡwəl]
 - goods
     - n. 商品；货物
     - commodity 商品
@@ -83,11 +83,11 @@
 - automobile/auto
     - n. 汽车
     - auto- 自动
-    - motor/car/**vehicle** 汽车
+    - motor/car/**vehicle** [ˈviːəkl ] 汽车
         - Rules require auto companies to <u>bring</u> their vehicles <u>into compliance</u>. 法规要求汽车公司使他们的车辆符合法规要求
             - bring...into compliance 使...符合（规定、标准、法规）
 - alcohol
-    - n. 酒精；含酒精的饮料
+    - n. 酒精；含酒精的饮料 [ˈælkəhɔːl]
 - route
     - n. 路线，路程
     - Think about diving a route that's very familiar.
@@ -95,7 +95,7 @@
 - childless
     - adj. 没有子女的
 - insect
-    - n. 昆虫，虫
+    - n. 昆虫，虫 [ˈɪnsekt]
     - sect- 切
         - section n. 章节
 - mankind
@@ -112,7 +112,7 @@
 - badly
     - adv. 坏，差；严重的；有害的
     - 与需要连用时翻译成**迫切需要**
-        - Such a trend is badly needed.
+        - Such a trend(趋势) is badly needed.
 - passive
     - adj. 被动的，消极的
     - pass- 感情
@@ -120,7 +120,7 @@
     - n. 动机，目的
     - mot- 动
     - Such measures[ˈmeʒər] have a couple of uplifting(令人振奋) motives.
-    - motivated v. 刺激
+    - motivated v. 刺激 [ˈmoʊtɪveɪtɪd]
         - Students are hardly motivated by monthly goals.
 - taxpayer
     - n. 纳税人
@@ -138,7 +138,7 @@
 - bright
     - adj. **明亮的**；鲜艳的；聪明的；有希望的
 - pioneer
-    - n. **先驱者，创始人**；vt. 开拓
+    - n. **先驱者，创始人**；vt. 开拓 [ˌpaɪəˈnɪr]
     - pion- == pin- 针
 - mouth
     - n. 口，嘴巴
@@ -147,12 +147,12 @@
 - surprisingly
     - adv. 惊人地
 - punish
-    - vt. 惩罚，处罚
+    - vt. 惩罚，处罚 [ˈpʌnɪʃ]
     - Some people were to be punished by imprisonment(监禁) or even death.
 - cartoon
     - n. 漫画；动画片
 - praise
-    - n./vt. 赞美，称赞
+    - n./vt. 赞美，称赞 [preɪz]
         - Japanese education is praised for helping the young climb the social ladder(阶梯).
     - raise 举起，提升
 - slightly
@@ -164,29 +164,29 @@
     - n. 照片，相片
     - picture 图画，照片
 - instrument
-    - n. 仪器，器械，工具；乐器
+    - n. 仪器，器械，工具；乐器 [ˈɪnstrəmənt]
     - stru- 建造
         - structure n. 结构
         - construct v. 构造
     - 仪器
-        - Hot spots provide the measuring instruments.
+        - Hot spots provide the measuring instruments. 热点提供了测量工具
     - 乐器
         - classical instruments 古典乐器
 - valley
-    - n. 山谷，溪谷
-    - Silicon Valley 硅谷
+    - n. 山谷，溪谷 [ˈvæli]
+    - Silicon([ˈsɪlɪkən]) Valley 硅谷
 - fold
     - n. 褶皱； v. 折叠
     - unfold v. 展开，打开
 - flu/influenza
     - n. 流感
     - flow 流
-    - epidemic adj. 流行的；n. 流感
+    - epidemic adj. 流行的；n. 流感 [ˌepɪˈdemɪk]
 - nose
 - surgery
     - n. 外科，外科手术
     - sur- 在..之上
-    - surgeon n. 外科医生
+    - surgeon n. 外科医生 [ˈsɜːrdʒən]
 - dose
     - n. 剂量，一剂；一份
         - More than three million doses were to be made available in early October 2009...
@@ -207,33 +207,33 @@
     - n. 门厅；大厅
     - music hall
 - bone
-    - n. 骨，骨骼
+    - n. 骨，骨骼 [boʊn]
 - doom
-    - vt. 命定，注定； n. 厄运，劫数
+    - vt. 命定，注定； n. 厄运，劫数 [duːm]
     - 厄运
         - Policymakers could avoid the forecasted(预测) doom and may even see progress. 政策制定者可能避免预测中的厄运，甚至还能看到进展
     - mood n. 心情，情绪
 - sacrifice
-    - n./vt. 牺牲；献祭
+    - n./vt. 牺牲；献祭 [ˈsækrɪfaɪs]
 - pour
-    - vt. 倒，灌；注；vi. 倾泻
+    - vt. 倒，灌；注；vi. 倾泻 [pɔːr]
     - It never rains but it pours. 祸不单行
     - 全身心投入
         - Imagining you are pouring your heart out to someone.
     - They spend the night <u>pouring cash into(投入大量资金到某个项目、产业或地方)</u> the hotels and restaurants.
       他们整晚把钱花在酒店和餐馆上
 - doubtful
-    - adj. 拿不定主意的，不确定的；怀疑的
+    - adj. 拿不定主意的，不确定的；怀疑的 [ˈdaʊtfl]
     - dou- 两个
         - double
     - doubt n. 怀疑
     - 出现在阅读题的作者态度题中是必错选项
 - disaster
-    - n. 灾难，大祸
+    - n. 灾难，大祸 [dɪˈzæstər]
 - tourist
     - n. 旅游者，观光者
     - tour v. 旅游，游历
-    - tourism n. 旅游业，观光业
+    - tourism n. 旅游业，观光业 [ˈtʊrɪzəm]
 - worthy
     - adj. 值得的（worthy of）；值得尊敬的
     - worth n. 价值，意义； adj. 值得的
@@ -283,7 +283,7 @@
     - n. **乐队；带**；vt. 用带绑扎
     - band-aid 邦迪创可贴；临时补救
 - solely
-    - adv. 仅；只；唯；单独地
+    - adv. 仅；只；唯；单独地 [ˈsoʊlli]
     - sol- 太阳，独自
         - solar adj. 太阳的
     - Few Americans <u>attribute</u> this solely <u>to</u> such obvious causes. 很少有美国人把这完全归因于如此明显的原因
@@ -321,7 +321,7 @@
 - headline
     - n. 标题，大字标题
 - plenty
-    - n. 丰富，大量
+    - n. 丰富，大量 [ˈplenti]
     - ple- == plen- == plet- == pli- == full/fill 满，填满
         - complete
     - plenty of 大量的 + 可数n./不可数n.
@@ -346,25 +346,25 @@
     - sure adv./adj. 确定的，一定的
         - I'm sure you"ll get there in the end.
 - worm
-    - n. 虫；蠕虫
+    - n. 虫；蠕虫 [wɜːrm]
 - shopper
 - video
     - n. 录像，录像机
     - radio 收音机
 - prison
-    - n. 监狱
+    - n. 监狱 [ˈprɪzn]
     - imprison n. 囚禁
     - prisoner n. 囚犯
 - greenhouse
     - n. 温室，暖房
     - White House 白宫
 - straight
-    - adj. 直的，正直的； adv. 直接的
+    - adj. 直的，正直的； adv. 直接的 [streɪt]
     - str- 长长的
         - street
     - His explanation(解释) was surprisingly straight up.
 - misery
-    - n. 痛苦，苦难（消极）
+    - n. 痛苦，苦难（消极）[ˈmɪzəri]
     - miss 错过，想念
 - till
     - prep. 直到
@@ -398,7 +398,7 @@
     - n. 校园
     - school n. 学校
 - lest
-    - conj. 唯恐，免得
+    - conj. 唯恐，免得 [lest]
     - lest == for fear that == in case
         - 在完形填空中一般是错误选项
     - They should be quick to respond to letters to the editor，lest animals rights misinformation(误传) go unchallenged.
@@ -408,7 +408,7 @@
     - hen n. 母鸡
     - cock n. 公鸡
 - fierce
-    - adj. 凶猛的；猛烈的；狂暴的
+    - adj. 凶猛的；猛烈的；狂暴的 [fɪrs]
     - fierce competition 激烈的竞争
 - joy
     - n. 喜悦，乐事
@@ -424,12 +424,12 @@
     - n. 镜子； vt. 反映，反射
     - mir- 惊奇
         - admire v. 钦佩
-        - miracle n. 奇迹
+        - miracle n. 奇迹 [ˈmɪrəkl]
 - myth
     - n. 神话
     - <u>They perpetuate(他们使...延续/维持/长久存在)</u> the myth of the lone genius.
 - cotton
-    - n. 棉花；棉线
+    - n. 棉花；棉线 [ˈkɑːtn]
     - Adam Davidson relates(叙述) a joke from <u>cotton country(美国)</u>.
 - unrealistic
     - adj. 不切实际的；不真实的
