--- a/postgraduate/word/simple-word/markdown/p9-p11.md
+++ b/postgraduate/word/simple-word/markdown/p9-p11.md
@@ -3,7 +3,7 @@
 - difficult
     - difficulty n.
 - digital
-    - adj. 数字的，数码的: digital device
+    - adj. 数字的，数码的 [ˈdɪdʒɪtl]: digital device 
     - digit n. 数字，**数位**（7位数）
         - number 数量(可数n.)         
         - amount 数量(不可数n.)
@@ -21,7 +21,7 @@
     - n. 土
 - happiness
     - n. 幸福
-- loss
+- loss [lɔːs]
 - poor
     - adj. 贫乏的: People are, on the whole, poor at considering background information.
         - People are, on the whole, poor at considering protecting the environment. 总体而言，人们对保护环境的考虑还不够
@@ -36,7 +36,7 @@
     - far away 在远处
 - five
 - picture
-    - describe the pictures briefly
+    - describe the pictures briefly(简要地)
     - n. 局面: For younger families, the picture is not any better.
     - v.: The overweight are sometimes pictured in the media with their faces covered.
 - run
@@ -77,7 +77,7 @@
     - n. 差距: There is a gap in working-class jobs.
     - gap year
 - journal
-    - n. 杂志，期刊
+    - n. 杂志，期刊 [ˈdʒɜːrnl]
 - neatly
     - adv. 整洁的，干净的: You should write neatly on the ANSWER SHEET.
 - next
@@ -163,7 +163,7 @@
 - reader
 - robot
 - drug
-    - n. 药物
+    - n. 药物 [drʌɡ]
     - n. 毒品, 与 alcohol(酒精)/tobacco(烟草) 连用
         - Many homeless adults are addicted to alcohol or drug.
 - event
@@ -195,7 +195,7 @@
     - n. 恐惧
     - vt. 害怕: They fear losing control of Mauna Kea.
 - foreign
-    - adj. 外国的
+    - adj. 外国的 [ˈfɔːrən]
     - foreigner n. 外国人
 - within
     - prep. 在（某段距离）之间，在（某段时间）之内
@@ -239,7 +239,7 @@
     - die
     - dying n. 濒临死亡: modern medicine has prolonged the physical agony of dying.
 - doctor
-    - doctor degree 博士学位
+    - doctor degree([dɪˈɡriː]) 博士学位
     - Dr. Song
 - gain
     - vt. 获得: no pain, no gain 不劳无获
