--- a/postgraduate/word/simple-word/markdown/p39-p41.md
+++ b/postgraduate/word/simple-word/markdown/p39-p41.md
@@ -266,7 +266,7 @@
 - snack
     - n. 快餐，小吃； v. 吃点心
     - snack snake 贪吃蛇
-- tragedy  [ˈtrædʒədi]
+- tragedy  [ˈtrædʒədig]
     - n. 惨事，悲剧
 - bush
     - n. 灌木，灌木丛
