--- a/postgraduate/word/simple-word/markdown/p33-p35.md
+++ b/postgraduate/word/simple-word/markdown/p33-p35.md
@@ -1,10 +1,10 @@
-# p33-p35
+# P33-P35
 
 - memorize
     - v. 记忆；记住
 - treasury
-    - n. 宝库；**财政部**
-    - **treasure** n. 宝库
+    - n. 宝库；**财政部(Treasury)** [ˈtreʒəri]
+    - **treasure** n. 宝库 [ˈtreʒər]
 - somehow
     - adv. 以某种方式
 - seed
@@ -13,38 +13,42 @@
     - adv. 在海外； adj. 海外的
 - east
 - island
-    - n. 岛屿
+    - n. 岛屿 [ˈaɪlənd]
 - maker
     - n. 生产者；制造者；制定者
 - bless
-    - vt. 为...祈神赐福
+    - vt. 为...祈神赐福 [bles]
     - ...to bless the union.
     - blessing n. 祝福；好事
         - The ruling was a blessing to films and patients.
-- ookay/ok
+- okay/OK
 - grape
     - n. 葡萄
-    - wine 葡萄酒
+    - wine 葡萄酒 [waɪn]
 - corner
     - n. 角落； vt. 将...逼入困境
     - turn the corner 有转机，有好转
-        - Everyone said，"just wait，you'll turn the corner，give it some time".
+        - Everyone said，"just wait，you'll <u>turn the corner</u>，give it some time".
     - around the corner 出现
-        - A true cashless society is probably not around the corner.
+        - A true cashless society is probably not <u>around the corner</u>.
 - sixty
 - clip
-    - v. **剪**，修剪； n. **片段**；回形针
+    - v. **剪**，修剪； n. **片段**；回形针 [klɪp]
     - 片段
-        - Participants watched shorter video clips.
+        - Participants(参与者) watched shorter video clips.
     - 剪
-        - You have to clip a Paragraph to place it elsewhere.
+        - You have to clip a paragraph to place it elsewhere.
 - jet
+    - n. 喷气式飞机；喷嘴；喷射 [dʒet]
     - ject- 扔，投掷
-    - n. 喷气式飞机；喷嘴；喷射
+        - subject
+        - object
+        - reject
+        - inject
     - jet aircraft 喷气式飞机
 - soil
-    - n. 泥土；土地
-    - 燃烧oil，直到boil，倒进soil
+    - n. 泥土；土地 [sɔɪl]
+    - 燃烧oil，直到boil(沸腾)，倒进soil
 - plus
     - prep./n./adj. 加
         - 2 plus 5 is 7.
@@ -52,45 +56,47 @@
         - add 9 to the total
 - symbol
     - n. 象征，标志，符号
-    - a symbol of the entrepreneurs' wealth
+    - a symbol of the entrepreneurs'(企业家) wealth
 - portion
-    - n. 一份，一部分； vt. 分配，把...分给 
+    - n. 一份，一部分； vt. 分配，把...分给 [ˈpɔːrʃn]
     - 一份，一部分
         - Three portions of fish and chips，please.
     - 分配 portion out
-        - Food was portioned out among the poor.
-    - part 整体当中的一部分
+        - Food was <u>portioned out</u> among(在...之中) the poor.
+    - portion vs part 整体当中的一部分
+        - part 整体当中的一部分
+        - portion 个体能拿到的一部分
     - **proportion** n. 比例，比重
         - The proportion of studying by mobile phone is 59%.
 - frightened
-    - adj. 惊吓的，受惊的
+    - adj. 惊吓的，受惊的 [ˈfraɪtnd]
     - fright n. 恐惧；
     - frighten v. 使...恐惧
     - fight v. 打仗
-- afterward（s）
+- afterward(s)
     - adv. 以后，后来
 - rebuild
     - v. 重建，重组
 - July
     - n. 七月
 - starve
+    - v. 使挨饿，使饿死 [stɑːrv]
     - ste- 僵硬
         - stern adj. 严厉的
-    - v. 使挨饿，使饿死
     - when's food？I'm starving
 - artwork
     - n. 艺术品，美术品
 - silicon
-    - n. 硅
+    - n. 硅 [ˈsɪlɪkən]
     - Silicon Valley 硅谷
 - slip
     - vi. 滑倒，溜走；下降，跌落 vt. 使滑动
     - 滑倒
-        - Slep outside and you could break a leg slipping on your doormat.
+        - Slip outside and you could break a leg slipping on your doormat. 在门外滑一下，你可能会因为踩在门垫上打滑而摔断腿
 - disturb
+    - vt. 干扰，妨碍；搅乱 [dɪˈstɜːrb]
     - turb- 转，搅拌
         - turbine n. 涡轮机，汽轮机
-    - vt. 干扰，妨碍；搅乱
     - They disturbed the power balance between different states.
 - recover
     - vi. **恢复，痊愈**； vt. 重新得到
@@ -100,40 +106,46 @@
 - bodily
     - adj. 人体的，身体的
 - resume
-    - n. **摘要，概要；简历；** v. （中断后）重新开始，继续；恢复
+    - n. **摘要，概要；简历；** v. （中断后）重新开始，继续；恢复 [rɪˈzuːm]
     - 摘要
         - AI looks at resumes in greater numbers than humans would be able to.
     - 继续
         - She resumed her career after an interval of six years.
     - sum- 拿，抓
 - pipe
-    - n. 管子，管道
-- apologize/apologise
+    - n. 管子，管道 [paɪp]
+- **apologize/apologise**
     - vi. 道歉；认错
-    - apology n. 道歉，认错
+    - **apology** n. 道歉，认错
 - sky
 - apartment
     - n. 公寓套房（高层）
-    - house（2-3层）
+    - house 2-3层
 - sunrise
+    - n. 日出
 - document
     - n. 公文，文件；证件； vt. **记录**
-    - The trend（that Mr.McWhorter documents）is unmistakable.
+    - doc- == duc- 教育，引导
+        - doctor
+        - educate
+    - The trend that Mr.McWhorter documents is unmistakable.
     - documentary n. 纪录片 adj. 记录的，纪实的；文献的； n. 纪录片
 - pupil
-    - n. 小学生；弟子
+    - n. 小学生；弟子 [ˈpjuːpl]
 - unity
-    - n. 团结，统一；和睦，和谐
+    - n. 团结，统一；和睦，和谐 [ˈjuːnəti]
+    - uni- 一个
+        - university
 - pathway
     - n. 小路，小径
 - altogether
     - adv. 完全；总之，总共
-    - There are altogether 40 Students in this class.
+    - There are altogether 40 students in this class.
 - nowhere
     - adv. 任何地方都不
-    - Human Evolution going nowhere 人类的进化已经无路可走
+    - Human Evolution Going Nowhere 人类的进化已经无路可走
 - diligent
-    - adj. 勤奋的，勤勉的
+    - adj. 勤奋的，勤勉的 [ˈdɪlɪdʒənt]
     - diligence n. 勤奋
 - giver
     - n. 捐赠者；捐助机构
@@ -142,36 +154,38 @@
 - filter
     - n. 滤器； vt. 过滤；
     - filter out 滤出
-    - to filter out what is unique from what is shared...
+    - to filter out what is unique(独特的部分/独有的东西) from what is shared(共同的部分/大家共有的东西)...
 - bed
     - n. **床**；花坛，苗圃；河床
 - brush
     - n. 刷子，画笔；轻触；小冲突vt. 刷；vi. 触到；擦及
     - 刷
-        - A century ago，few people regularly brushed their teeth mutiple times.
+        - A century ago，few people regularly brushed their teeth multiple times.
     - 触到 brush against
-        - He felt her hair brushed against his shoulder.
+        - He felt her hair <u>brushed against</u> his shoulder.
     - broom 笤帚
-- August
+- August [ˈɔːɡəst]
 - excel
-    - vi. 擅长，突出（excel in）
-    - ...to excel in making the connections...
+    - vi. 擅长，突出(excel in)
+    - ...to <u>excel in/at</u> making the connections...
     - excellent adj. 优秀的，卓越的
     - excellence n. 优秀；卓越，杰出
 - Monday
 - preferable
     - adj. 更可取的，更好的
         - it is preferable for sb. to do sth. 对于某人而言更可取的是去做某事
-            - It is preferable for journalists to rely on their own notions of significance.
+            - It is preferable for journalists(记者) to rely(依靠) on their own notions(主张，看法) of significance(
+              重要性).
     - prefer v. 更喜欢，较喜欢
-        - prefer A to B 更喜欢A
+        - prefer A to B 相比B更喜欢A
         - They prefer part-time jobs to full-time jobs.
 - hail
-    - n. 雹；一阵；vi. 下雹； vt. **招呼；称赞**
+    - vt. **招呼；称赞**；n. 雹；一阵；vi. 下雹
     - We hail them as Americans in the making...
 - chip
     - n. 缺口，瑕疵；**芯片**；
     - ... dolls equipped with personality chips.
+    - ship n. 船
 - enjoyment
     - n. 愉快
 - poorly
@@ -182,7 +196,7 @@
 - pocket
     - n. **口袋**，小包；adj. 袖珍的，小型的
     - 口袋
-        - They go through the wallet or pocket of an <u>arrestee</u>（被捕者）
+        - They go through the wallet or pocket of an <u>arrestee(被捕者)</u>.
 - personally
     - adv. 就本人而言；就个人意见
     - personally speaking 就个人而言
@@ -191,20 +205,21 @@
 - educator
     - n. 教育工作者，教师；教育家
 - widen
-    - v. 拓宽；加宽
+    - v. 拓宽；加宽 [ˈwaɪdn]
     - Tax policies are aimed at preventing the income gap form widening.
 - dairy
     - n. 牛奶厂； adj. 奶制的
-    - Most land is used for meat and <u>dairy production</u>（奶制品）.
+    - Most land is used for meat and <u>dairy production(奶制品)</u>.
 - mend
     - v. 修理，修补； vi. 恢复健康，痊愈
     - 修理，修补
         - The NHS trust has mended its ways.
-- September
+- September [sepˈtembər]
 - atmospheric
-    - adj. 大气层的，大气的
-        - We must press forward on deeper atmospheric and oceanic research.
-    - atmosphere n. 大气层；空气；环境
+    - adj. 大气层的，大气的 [ˌætməsˈferɪk]
+        - We must <u>press forward(推进/向前推进/大力开展)</u> on deeper atmospheric and oceanic(海洋 [ˌoʊʃiˈænɪk])
+          research.
+    - atmosphere n. 大气层；空气；环境 [ˈætməsfɪr]
 - pop
     - vi. 突然出现；爆开； n. 流行音乐
     - pop into my mind 突然进入我的脑海中
@@ -212,69 +227,72 @@
     - v./n. 咧嘴笑
 - relax
     - v. 放松；缓和
-    - relaxation n. 放松，消遣
+    - relaxation n. 放松，消遣 [ˌriːlækˈseɪʃn]
 - horse
-- December
+- December [dɪˈsembər]
 - scan
     - vt./n. 浏览，扫描
     - brain-scan experiments
 - exact
-    - adj. 精确的，准确的
+    - adj. 精确的，准确的 [ɪɡˈzækt]
     - exactly adv. 恰恰，精确地
-        - But that's exactly the kind of false cheerfulness...
+        - But that's exactly the kind of false cheerfulness(开朗)...
 - fluid
-    - n. 流体； adj. 流动的，流体的
+    - n. 流体； adj. 流动的，流体的 [ˈfluːɪd]
     - fluid intelligence 流体智力
 - lip
     - n. 嘴唇
 - freshman
     - n. 大一新生
-    - sophomore 大二学生
-    - junior 大三学生
+    - sophomore 大二学生 [ˈsɑːfəmɔːr]
+        - soph- 智慧
+            - philosophy n. 哲学 [fəˈlɑːsəfi]
+    - junior 大三学生 [ˈdʒuːniər]
     - senior 大四学生
 - worthless
     - adj. 没有用的，无价值的
 - token
-    - adj. 象征性的，装样子的； n. **代币；礼券**
+    - n. **代币；礼券**；adj. 象征性的，装样子的
 - coast
-    - n. **海岸，海滨**； v. 惯性滑行
+    - n. **海岸，海滨**； v. 惯性滑行 [koʊst]
 - neighbor
 - cousin
-    - n. 堂兄弟，表姐妹
-    - Though not biologically related，friends are as "related" as fourth cousin.
+    - n. 堂兄弟，表姐妹 [ˈkʌzn]
+    - Though not biologically(生物学上) related，friends are as "related" as fourth cousin.
 - border
     - n. **界线；边境**； v. 给...加上边；接近
-    - Its internal borders are open to goods，capital and labour.
+    - Its internal borders are open to goods, capital(资本) and labour.
 - festival
-    - n. 节日
+    - n. 节日 [ˈfestɪvl]
     - Spring Festival 春节
     - Official Festival 官方的节日
 - mathematical
     - adj. 数学上的
-    - mathematics n. 数学
+    - mathematics/math n. 数学 [ˌmæθəˈmætɪks]
 - Sunday
-- achiever
-    - n.成功者
-        - ... experiments with high achievers.
-    - achieve vt. 实现，完成；达到，得到
-    - Arch- 尖
+- achiever [ əˈtʃiːvər]
+    - n. 成功者
+        - ...experiments with high achievers.
+    - achieve vt. 实现，完成；达到，得到 [əˈtʃiːv]
+        - ach- == arch- 尖
 - youngster
     - n. 青年
 - website
     - n. 网站
 - vain
+    - adj. 徒劳的，自负的 [veɪn]
     - van- 空
         - vanish 消失
         - vanity 虚荣心
-    - adj. 徒劳的，自负的
-        - Americans take a vain pride in their long life expectancy.
+    - Americans <u>take a</u> vain <u>pride in</u> their long <u>life expectancy(预期寿命)</u>. 美国人对自己较长的寿命抱有虚荣的自豪感
+        - take a...pride in 以...为傲/因...而感到自豪
 - activist
     - n. 活跃分子，积极分子
     - active adj. 活跃的
 - camera
 - anymore
     - adv. 不再
-    - not...anymore 不再
+    - **not...anymore** 不再
 - throw
     - vt. 扔，投掷
     - throw himself into a hobby 投入到一个习惯
@@ -285,22 +303,24 @@
     - Many of the ships were lost in storms.
     - brainstorm 头脑风暴
 - marketplace
-    - n. 市场竞争；**集市，市场**
+    - n. **集市，市场**；市场竞争
 - unusually
-    - adv. 特别地，很（放在adj. 之前表示强调）
+    - adv. 特别地，很(放在 adj. 之前表示强调)
 - alien
-    - adj. 外国的；**外国人的**；陌生的 n. **外国人**，外星人
+    - adj. 外国的；**外国人的**；陌生的 n. **外国人**，外星人 [ˈeɪliən]
 - anyway
     - adv. 无论如何
 - bang
-    - n. 爆炸声，猛击
+    - n. 爆炸声，猛击 [bæŋ]
+    - big bang 宇宙大爆炸理论
 - careless
     - adj. 不小心的；不仔细的
 - angry
     - adj. 发怒的，愤怒的
     - anger n. 愤怒
-- Herion
-    - 海洛因
+        - ang- 弯
+- heroin
+    - 海洛因 [ˈheroʊɪn]
 - photographic
     - adj. 摄影的，摄制的；照片的
 - tour
@@ -309,7 +329,9 @@
 - powerless
     - adj. 没有权利的，无影响力的
 - underground
-    - adv. **在地下；秘密的**； n. 地铁（英式）
+    - adv. **在地下；秘密的**； n. 地铁(英式)
+    - subway
+    - metro
 - sadness
     - n. 悲伤
 - gentleman
@@ -317,29 +339,31 @@
 - beef
     - n. 牛肉
 - sink
-    - vi. 下沉；n. 水槽
+    - vi. 下沉；n. 水槽 [sɪŋk]
     - pink
 - boss
     - n. 老板； v. 指挥
 - furniture
-    - n. 家具
+    - n. 家具 [ˈfɜːrnɪtʃər]
     - Here was the raw material of houses and furniture...
 - seize
+    - vt. 抓住，夺取，占据 [siːz]
     - se- 播种
-    - vt. 抓住，夺取，占据
+        - seed n. 种子
     - ...seize every minute to work
 - digit
-    - n. 数字，数位
+    - n. 数字，数位 [ˈdɪdʒɪt]
     - digital
     - The <u>digit/number/amount/sum</u> of crimes id increasing.
 - anger
 - rescue
+    - vt./n. 营救 [ˈreskjuː]
     - re强调 + s=ex + cue=cure
-    - vt./n. 营救
     - Two children were rescued from the burning car.
 - significantly
     - adv. 有重大意义地；显著地；明显地
     - significant adj. 有重大意义的；显著的；大量的
-        - some of the nation's most significant diplomats and politicians.
-        - 大量的
-            - It should  <u>account for（解释，占据） a significant portion</u>（占了很大比重） of the grade.
+        - sign- 标志
+        - some of the nation's most significant diplomats(外交官, [ˈdɪpləmæts]) and politicians.
+        - *大量的*
+            - It should <u>*account for(解释，占据)* a significant portion(占了很大比重)</u> of the grade.
