feat: add matrix

--- a/postgraduate/word/simple-word/markdown/p27-p29.md
+++ b/postgraduate/word/simple-word/markdown/p27-p29.md
@@ -435,7 +435,7 @@
     - adj. 不切实际的；不真实的
 - insecurity
     - n. 不安全，危险，不可控
-    - security n. 安全；安全工作
+    - security n. 安:全；安全工作
         - 安全 security == safety
         - safety and security
     - secure adj. 安全的
